<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImplicitIntents</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launchMap">Launch Map</string>
    <string name="launchMarket">Launch Market</string>
    <string name="sendEmail">Send Email</string>
    <string name="sendImage">Send Image</string>
    <string name="sendImages">Send Multiple Images</string>

</resources>
