<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CC00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/LaunchMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFCC00"
                android:onClick="process"
                android:text="@string/launchMap" />

            <Button
                android:id="@+id/LaunchMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LaunchMap"
                android:layout_alignRight="@+id/LaunchMap"
                android:layout_below="@+id/LaunchMap"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFCC00"
                android:onClick="process"
                android:text="@string/launchMarket" />

            <Button
                android:id="@+id/SendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/LaunchMarket"
                android:layout_alignRight="@+id/LaunchMarket"
                android:layout_below="@+id/LaunchMarket"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFCC00"
                android:onClick="process"
                android:text="@string/sendEmail" />

            <Button
                android:id="@+id/SendImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/SendEmail"
                android:layout_alignRight="@+id/SendEmail"
                android:layout_below="@+id/SendEmail"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFCC00"
                android:onClick="process"
                android:text="@string/sendImage" />

            <Button
                android:id="@+id/SendImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/SendImage"
                android:layout_alignRight="@+id/SendImage"
                android:layout_below="@+id/SendImage"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#FFCC00"
                android:onClick="process"
                android:text="@string/sendImages" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
